CSS/style.css
body {
	background-image: url("../img/plaid.png");
	margin: 0;
	padding: 0;
}

header {
	margin-top: -2em;
	position: relative;
	background-color: #163B8C;
	background-image: url("../img/MastheadGradientBG.jpg");
	background-size: 100% 100%;
	background-repeat: no-repeat; 
	text-align: center;
}

div#body {
	margin: -1em 0 1.3em 0;
	padding-top: 0;
	overflow: hidden;
}

footer {
	box-shadow: -1px -1px 1px 2px #000;
	background-color: rgba(147, 0, 0, 0.65);
	text-shadow: -1px -1px 1px #000;
	color: #FFF;
	text-align: center;
}

/* --Header Elements-- */

#logo {
	position: absolute;
	top: .2em;
	left: 5em;
	height: 6em;
}

#title {
	padding: .5em;
	font-size: 3em;
	color: #FFFFFF;
        font-family: 'Roboto', sans-serif;
   	text-shadow: -1px 0 0 #96001B, 1px 1px 0 #96001B,
           2px -1px 0 #96001B, 3px 0 0 #96001B;

}

#login_form {
    position: absolute;
    top:1em;
    right: 3em;
    padding:10px;
}

#forgotPass{
    color:white;
    position:absolute;
    top:35px;
    left:50px;
}

#registration{
    color:white;
    position:absolute;
    top:35px;
    left:200px;
}

#SignedIn{
    color:white;
    position: absolute;
    top:1em;
    right: 2em;
    padding:10px;
    display:none;
}

#welcome{
    position: relative;
    right: 4em;
}

#logout{
    position: relative;
    bottom: 4em;
}

#register_form{
    display: none;
}

/* --Body Elements-- */
#myLoc{
    text-align: center;
}
/* Menu */

#menuWrapper {
	float: left;
	width: 16%;
	background-color: rgba(22,59,140, .3);
	border: 2px solid;
	border-left: none;
	border-top-right-radius: 25px;
	border-bottom-right-radius: 25px;
	position: absolute;
	left: -1em;
}

#menu {
	float: left;
	width: 85%;
	margin-bottom: 1em;
	font-size: 1.25em;
}

#menu_button {
	float: left;
	background-image: url(../img/menu_icon.png);
	background-color: transparent;
	background-size: 100% 100%;
	background-repeat: no-repeat;
	height: 3em;
	width: 3em;
	margin-top: 2.5em;
	margin-left: 1.5em;
}

#menu  ul {
	list-style:none;
	margin: 0;
	padding: 0;
	border: none;
	/*color: white;
	list-style-type: none;*/
}

#menu li {

	border-bottom: 1px solid #90bade;
	margin: 0;
	list-style: none;
	list-style-image: none;
}

#menu li p {
	display: block;
	padding: 5px 5px 5px 0.5em;
	border-left: 10px solid #CE1126;
	border-right: 10px solid #E2D6B5;
	background-color: #CE1126;
	color: #fff;
	text-decoration: none;
	font-size: 1.2em;
	width: 100%; 
}

html>body #menu li a, html>body #menu li p {
	width: auto;
	margin: 0;
}

#menu li a {
	border-left: 10px solid #E2D6B5;
	border-right: 10px solid #E2D6B5;
	background-color: #E2D6B5;
	display: block;
	padding: 5px 5px 5px 0.5em;
	color: #000;
	text-decoration: none;
	width: 100%; 
}

/* Favorites */

#favorites{
	margin-top: 1em;
}

/* Evets */

#events{
	margin-top: 1em;
}

/* Directions */

#dir_title {
	margin-bottom: -1px;
	padding-left: 1em;
	border: 1.75px solid #959595;
	border-top-right-radius: 10px;
	border-bottom-right-radius: 10px;
}

#dir_title p {
	font-weight: bold;
	color: #163B8C;
	margin-left: 5%;
}

#directions {
	margin-top: 0px;
	margin-bottom: 1em;
	padding-left: 1.5em;
}

#directions p {
	color: #163B8C;
}

#directionsWrapper {
	margin: 1em 0 1em 0em;
}

.direc_bttn {
	border-top: 1px solid #96d1f8;
    background: #65a9d7;
    background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
    background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
    background: -moz-linear-gradient(top, #3e779d, #65a9d7);
    background: -ms-linear-gradient(top, #3e779d, #65a9d7);
    background: -o-linear-gradient(top, #3e779d, #65a9d7);
    padding: 5px 10px;
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    border-radius: 8px;
    -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
    -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
    box-shadow: rgba(0,0,0,1) 0 1px 0;
    text-shadow: rgba(0,0,0,.4) 0 1px 0;
    color: white;
    font-size: 14px;
    font-family: Georgia, serif;
    text-decoration: none;
    vertical-align: middle;
    margin-left: 15%;
	margin-right: 2.5em;
	margin-bottom: 2em;	
}

/*#menu > ul > li > ul {
	color: black;
	list-style-type: none;
}
ul li ul {
    display: none;
}
ul li:hover ul {
    display: block;
}*/


/* Map */

#mapContainer {
	float: right;
	width: 83%;
	margin: 0 1% 0 1%;
}

#mapWrapper {
	
	height: 40em;
}

/* Searching Form*/
#searchingForm {
	right: 0;
}

#marker_form{
    display: none;
}

/* --Footer Elements-- */

footer p {
	padding: 1em;
}

